@@ -6,6 +6,9 @@ Version 1.11.1+svn:
  * Language and i18n:
    * Updated translations: Italian, Portuguese.
 
+ * Miscellaneous and bug fixes:
+   * The undo stack is preserved across a save-reload.
+
 
 Version 1.11.1:
  * AI:
