@@ -4062,7 +4062,7 @@ static char const *handled_file_tags[] = {
 	"event", "generator", "label", "lua", "map", "menu_item",
 	"modification", "music", "options", "side", "sound_source",
 	"story", "terrain_graphics", "time", "time_area", "tunnel",
-	"variables",
+	"undo_stack", "variables",
 	/// @todo: These are only needed for MP campaigns and only for subsequent scenarios, see bug #18883
 	"multiplayer", "replay_start", "snapshot"
 };
