@@ -6,6 +6,8 @@ Version 1.11.1+svn:
  * WML engine:
    * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
      error message if the image= key is missing
+ * Miscellaneous and bug fixes:
+   * The undo stack is preserved across a save-reload.
 
 Version 1.11.1:
  * AI:
